--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <br>
                 <li>The first player to connect three in a row vertically, horizontally, or diagonally is the winner</li>
                 <br>
-                <li>In case of a game where no player connects three in a row the result is a cats game</li>
+                <li>If a winner is determined the loser will go first the next game</li>
+                <br>
+                <li>In case of a game where no player connects three in a row the result is a cats game and Bender will go first upon reset</li>
             </ul>
         </div>
         <!-- Homer Image -->
