fixed some the cats game bug and the game over bug

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <br>
                 <li>The first player to connect three in a row vertically, horizontally, or diagonally is the winner</li>
                 <br>
-                <li>If a winner is determined the loser will go first the next game</li>
+                <li>Whoever is losing will go first the next game.  If players are tied, Bender will go first</li>
                 <br>
                 <li>In case of a game where no player connects three in a row the result is a cats game and Bender will go first upon reset</li>
             </ul>
@@ -48,6 +48,7 @@
         <div class="pure-u-5-24 blue">
         	<div class="names">Bender's Wins</div>
         	<div id="benderWin" class="winBox"></div>
+        	<div id="benderDance"></div>
         </div>
         <div class="pure-u-14-24 yellow padding bottom">
            <span id="startOver" class="blue">Start Over</span>
@@ -74,6 +75,7 @@
         <div class="pure-u-5-24 blue">
         	<div class='names'>Homer's Wins</div>
         	<div id="homerWin" class="winBox"></div>
+        	<div id="homerDance"></div>
         </div>
     </div>
     <!-- Look into doing a div -->
